--- a/index.html
+++ b/index.html
@@ -9,6 +9,49 @@
     </head>
 
     <body>
-        
+        <div id="container">
+            <!-- header -->
+            <header>
+
+            </header>
+            <!-- /header -->
+
+            <!-- main -->
+            <main>
+                <!-- first section -->
+                <section class="clearfix">
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                </section>
+                <!-- /first section -->
+
+                <!-- 2nth section -->
+                <section class="clearfix">
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                </section>
+                <!-- /2nth section -->
+
+                <!-- last section -->
+                <section class="clearfix">
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
+                </section>
+                <!-- /last section -->
+            </main>
+            <!-- /main -->
+
+            <!-- footer -->
+            <footer>
+
+            </footer>
+            <!-- /footer -->
+        </div>
     </body>
 </html>
