--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="container">
             <!-- header -->
             <header>
-
+                <h1>Memory Game</h1>
             </header>
             <!-- /header -->
 
@@ -49,7 +49,7 @@
 
             <!-- footer -->
             <footer>
-
+                <h4>From Team Boolean</h4>
             </footer>
             <!-- /footer -->
         </div>
