--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
         <title>Memory Game</title>
     </head>
@@ -30,7 +32,7 @@
                 <!-- 2nth section -->
                 <section class="clearfix">
                     <div class="card"></div>
-                    <div class="card"></div>
+                    <div id="card_static" class="card"></div>
                     <div class="card"></div>
                     <div class="card"></div>
                 </section>
