--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
                 <!-- 2nth section -->
                 <section class="clearfix">
                     <div class="card"></div>
-                    <div id="card_static" class="card"></div>
+                    <div id="card_static" class="card card_static">
+                        <img class="card_img" src="img/noun_air_balloon_3134741.png" alt="Card">
+                        <h3 class="card_text">Air baloon</h3>
+                    </div>
                     <div class="card"></div>
                     <div class="card"></div>
                 </section>
