--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <section class="clearfix">
                     <div class="card"></div>
                     <div id="card_static" class="card card_static">
-                        <img class="card_img" src="img/noun_air_balloon_3134741.png" alt="Card">
-                        <h3 class="card_text">Air baloon</h3>
+                        <img class="card_img" src="img/noun_air_balloon_3134741.png" alt="Card Ari Baloon">
+                        <h3 class="card_text color_pink">Air baloon</h3>
                     </div>
                     <div class="card"></div>
                     <div class="card"></div>
@@ -43,7 +43,10 @@
 
                 <!-- last section -->
                 <section class="clearfix">
-                    <div class="card"></div>
+                    <div class="card">
+                        <img class="card_img" src="img/noun_Tractor_3134797.png" alt="Card Tractor">
+                        <h3 class="card_text color_orange">Tractor</h3>
+                    </div>
                     <div class="card"></div>
                     <div class="card"></div>
                     <div class="card"></div>
