--- a/index.html
+++ b/index.html
@@ -22,22 +22,43 @@
             <main>
                 <!-- first section -->
                 <section class="clearfix">
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
+                    <div class="card">
+                        <img class="card_img" src="img/noun_Cruise_Ship_3134824.png" alt="Card Cruise">
+                        <h3 class="card_text color_blue">Cruise</h3>
+                    </div>
+                    <div class="card">
+                        <img class="card_img" src="img/noun_Tractor_3134797.png" alt="Card Tractor">
+                        <h3 class="card_text color_orange">Tractor</h3>
+                    </div>
+                    <div class="card">
+                        <img class="card_img" src="img/noun_air_balloon_3134741.png" alt="Card Ari Baloon">
+                        <h3 class="card_text color_pink">Air baloon</h3>
+                    </div>
+                    <div class="card">
+                        <img class="card_img" src="img/noun_Bicycle_3134821.png" alt="Card Bicycle">
+                        <h3 class="card_text color_green">Bicycle</h3>
+                    </div>
                 </section>
                 <!-- /first section -->
 
                 <!-- 2nth section -->
                 <section class="clearfix">
-                    <div class="card"></div>
-                    <div id="card_static" class="card card_static">
+                    <div class="card">
+                        <img class="card_img" src="img/noun_Bicycle_3134821.png" alt="Card Bicycle">
+                        <h3 class="card_text color_green">Bicycle</h3>
+                    </div>
+                    <div id="card_static" class="card">
                         <img class="card_img" src="img/noun_air_balloon_3134741.png" alt="Card Ari Baloon">
                         <h3 class="card_text color_pink">Air baloon</h3>
                     </div>
-                    <div class="card"></div>
-                    <div class="card"></div>
+                    <div class="card">
+                        <img class="card_img" src="img/noun_Submarine_3134738.png" alt="Card Submarine">
+                        <h3 class="card_text color_violet">Submarine</h3>
+                    </div>
+                    <div class="card">
+                        <img class="card_img" src="img/noun_Tram_3134750.png" alt="Card Tram">
+                        <h3 class="card_text color_red">Tram</h3>
+                    </div>
                 </section>
                 <!-- /2nth section -->
 
@@ -47,9 +68,18 @@
                         <img class="card_img" src="img/noun_Tractor_3134797.png" alt="Card Tractor">
                         <h3 class="card_text color_orange">Tractor</h3>
                     </div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
+                    <div class="card">
+                        <img class="card_img" src="img/noun_Tram_3134750.png" alt="Card Tram">
+                        <h3 class="card_text color_red">Tram</h3>
+                    </div>
+                    <div class="card">
+                        <img class="card_img" src="img/noun_Cruise_Ship_3134824.png" alt="Card Cruise">
+                        <h3 class="card_text color_blue">Cruise</h3>
+                    </div>
+                    <div class="card">
+                        <img class="card_img" src="img/noun_Submarine_3134738.png" alt="Card Submarine">
+                        <h3 class="card_text color_violet">Submarine</h3>
+                    </div>
                 </section>
                 <!-- /last section -->
             </main>
